--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.3"
+    "fs": "0.0.1-security",
+    "mongoose": "^5.9.3",
+    "puppeteer": "^2.1.1"
   }
 }
