--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "cheerio": "^1.0.0-rc.3",
     "mapbox-gl": "^1.3.1",
+    "newsapi": "^2.4.0",
     "node-geocoder": "^3.25.0",
+    "node-schedule": "^1.3.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
