--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "cheerio": "^1.0.0-rc.3",
+    "core-js": "^2.8.10",
+    "currentsapi": "^0.1.0",
     "mapbox-gl": "^1.3.1",
+    "net-browserify": "^0.2.4",
     "newsapi": "^2.4.0",
     "node-geocoder": "^3.25.0",
+    "node-open-geocoder": "^4.0.1",
     "node-schedule": "^1.3.2",
+    "puppeteer-core": "^2.1.1",
+    "querystring-browser": "^1.0.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
