--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 ATLAS_URI=mongodb+srv://rdlin264:rdlin264@cluster0-tk2wx.azure.mongodb.net/test?retryWrites=true&w=majority
 GEOCODER_PROVIDER=mapquest
 GEOCODER_API_KEY=9okpFG6Ap1AAOkH5ziwaV8DIDQQPXTxd
+GENERATE_SOURCEMAP=false
