--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "ws": "^7.2.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start && node backend/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build && node backend/server.js"
+    "heroku-postbuild": "npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
