--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ws": "^7.2.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node backend/server.js && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
