--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mapbox-gl": "^1.3.1",
     "node-geocoder": "^3.25.0",
     "node-schedule": "^1.3.2",
+    "puppeteer": "^2.1.1",
     "puppeteer-core": "^2.1.1",
     "querystring-browser": "^1.0.4",
     "react": "^16.13.0",
@@ -29,7 +30,9 @@
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm install && npm run build"
   },
-  "engines" : { "node" : ">=0.12" },
+  "engines": {
+    "node": ">=0.12"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
